<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="radio">Radio</string>
    <string name="my_music">My Music</string>
    <string name="library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>