<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/nav_home"
    android:title="@string/home"
    android:enabled="true"
    android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/nav_radio"
        android:title="@string/radio"
        android:enabled="true"
        android:icon="@drawable/ic_radio"/>
    <item
        android:id="@+id/nav_my_music"
        android:title="@string/my_music"
        android:enabled="true"
        android:icon="@drawable/ic_music"/>
    <item
        android:id="@+id/nav_library"
        android:title="@string/library"
        android:enabled="true"
        android:icon="@drawable/ic_library"/>
</menu>